# cgevents-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_cgevent_create.rs  01_synth_click.rs  02_cgeventsource_state.rs  02_type_string.rs  03_cgeventtap_access.rs  03_keyboard_tap.rs  04_cgeventfield_roundtrip.rs  04_event_roundtrip.rs  05_cgeventtype_masks.rs  05_source_state.rs  06_cgeventflags_modifiers.rs  07_cgeventmousesubtype.rs  08_cgeventtaplocation_post.rs  09_cgeventtapoptions_list.rs  10_cgeventtapproxy_repost.rs  11_cgeventtimestamp_roundtrip.rs  12_async_tap_stream.rs
src/: async_api.rs  cg_event_field.rs  cg_event_flags.rs  cg_event_mouse_subtype.rs  cg_event_tap_location.rs  cg_event_tap_options.rs  cg_event_tap_proxy.rs  cg_event_timestamp.rs  cg_event_type.rs  cg_gesture_phase.rs  cg_momentum_scroll_phase.rs  cg_scroll_phase.rs  error.rs  lib.rs  raw_ffi.rs
src/event/: mod.rs
src/ffi/: cg_event.rs  cg_event_field.rs  cg_event_flags.rs  cg_event_mouse_subtype.rs  cg_event_source.rs  cg_event_tap.rs  cg_event_tap_location.rs  cg_event_tap_options.rs  cg_event_tap_proxy.rs  cg_event_timestamp.rs  cg_event_type.rs  cg_gesture_phase.rs  cg_momentum_scroll_phase.rs  cg_scroll_phase.rs  mod.rs
src/source/: mod.rs
src/tap/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CGEventsBridge/: AsyncStream.swift  CGEvent.swift  CGEventField.swift  CGEventFlags.swift  CGEventMouseSubtype.swift  CGEventSource.swift  CGEventTap.swift  CGEventTapLocation.swift  CGEventTapOptions.swift  CGEventTapProxy.swift  CGEventTimestamp.swift  CGEventType.swift  CGGesturePhase.swift  CGMomentumScrollPhase.swift  CGScrollPhase.swift  Support.swift
tests/: api_coverage.rs  async_stream_tests.rs  cgevent_tests.rs  cgeventfield_tests.rs  cgeventflags_tests.rs  cgeventmousesubtype_tests.rs  cgeventsource_tests.rs  cgeventtap_tests.rs  cgeventtaplocation_tests.rs  cgeventtapoptions_tests.rs  cgeventtapproxy_tests.rs  cgeventtimestamp_tests.rs  cgeventtype_tests.rs  cgphase_tests.rs
