[package]
name = "cgevents"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/cgevents-rs"
repository = "https://github.com/doom-fish/cgevents-rs"
description = "Safe Rust bindings for Apple's Quartz Event Services — synthesise, inspect, and intercept input on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["input", "keyboard", "mouse", "macos", "automation"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "cgevents"
crate-type = ["lib"]

[dependencies]
bitflags = "2"

[dev-dependencies]
regex-lite = "0.1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_synth_click"

[[example]]
name = "02_type_string"

[[example]]
name = "03_keyboard_tap"

[[example]]
name = "04_event_roundtrip"

[[example]]
name = "05_source_state"

[profile.release]
debug = "full"
strip = "none"
