[package]
name = "cgevents"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/cgevents-rs"
repository = "https://github.com/doom-fish/cgevents-rs"
description = "Safe Rust bindings for Apple's Quartz Event Services via a Swift bridge on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["input", "keyboard", "mouse", "macos", "automation"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[features]
default = []
raw-ffi = []
async = []

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "cgevents"
crate-type = ["lib"]

[dependencies]
bitflags = "2"
doom-fish-utils = { path = "../doom-fish-utils", version = "0.1" }

[dev-dependencies]
regex-lite = "0.1"
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[test]]
name = "api_coverage"
required-features = ["raw-ffi"]

[[test]]
name = "async_stream_tests"
required-features = ["async"]

[[example]]
name = "12_async_tap_stream"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
